@@ -9,4 +9,6 @@ class Tracker extends BaseModel {
     public $id;
     /** @var string */
     public $name;
+    /** @var string|null */
+    public $uid;
 }
