@@ -9,7 +9,12 @@ class TrackerDetail extends BaseModel {
     public $id;
     /** @var string */
     public $name;
-    /** @var string */
+    /** @var string|null */
+    public $uid;
+    /**
+     * @var string
+     * @deprecated
+     */
     public $address;
     /** @var string */
     public $vendor;
