@@ -2,6 +2,7 @@
   "data": {
     "id": "163784",
     "name": "ppc-5bbc370ddb808",
+    "uid": "123456789",
     "address": "ppc-5bbc370ddb808",
     "firmware": null
   }
