@@ -2,6 +2,7 @@
   "data": {
     "id": 126222,
     "name": "Pyranometer SMPx (Modbus)",
+    "uid": "123456789",
     "address": "7",
     "firmware": "1.0"
   }
