@@ -2,11 +2,13 @@
   "data": [
     {
       "id": "816639",
-      "name": "E18.S01 A"
+      "name": "E18.S01 A",
+      "serial": "123456789"
     },
     {
       "id": "816640",
-      "name": "E18.S02 B"
+      "name": "E18.S02 B",
+      "serial": "012345678"
     }
   ]
 }
