@@ -51,3 +51,4 @@
 2024-08-29: Add ticket yield-losses endpoint
 2024-10-18: Add inverter PR endpoint
 2024-11-05: Disallow users from changing the real yield loss values with the flat-rate, peak, and simplified peak yield-losses endpoints
+2024-11-18: Add uid property and deprecate the address property for all device models
